# xchannel-net

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md
.claude/skills/xchannel-net-dev/: SKILL.md
xchannel-net/: Cargo.toml
xchannel-net-client/: Cargo.toml
xchannel-net-client/src/: lib.rs
xchannel-net-core/: Cargo.toml
xchannel-net-core/src/: codec.rs  dissemination.rs  identity.rs  lib.rs  membership.rs  replication.rs  stream.rs  transport.rs  wire.rs
xchannel-net/src/: broadcast.rs  lib.rs  main.rs  node.rs  registry.rs  util.rs
xchannel-net/tests/: client_rpc.rs  cross_process.rs
