[package]
name = "xchannel-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "xchanneld — the xchannel-net node-manager daemon: registry, discovery, and TCP replication."

[lib]
name = "xchannel_net"
path = "src/lib.rs"

[[bin]]
name = "xchanneld"
path = "src/main.rs"

[dependencies]
xchannel-net-core.workspace = true
xchannel.workspace = true
